@@ -23,17 +23,9 @@ if [ $(dpkg-query --show | cut -f1 | grep "^gcc$" | wc -l) -gt 0  ] ; then
     echo "($0) Building Voyage SDK.  No purging."
 
 else
-	if [ $(dpkg-query --show | cut -f1 | grep "^asterisk$" | wc -l) -gt 0  ] ; then
-    	echo "($0) Building Voyage ONE.  "
-		PURGE_PKGS="man-db manpages info dselect"
-	elif  [ $(dpkg-query --show | cut -f1 | grep "^mpd$" | wc -l) -gt 0 ] ; then
-        	echo "($0) Building Voyage MPD.  "
-        	PURGE_PKGS="man-db manpages info dselect"
-	else
-        	echo "($0) Building Voyage Linux.  "
-		PURGE_PKGS="aptitude man-db manpages info dselect live-config live-config-sysvinit live-boot live-boot-initramfs-tools"
-		PURGE_PKGS="aptitude man-db mAnpages info dselect perl perl-modules"
-	fi
+       	echo "($0) Building Voyage Linux.  "
+	PURGE_PKGS="aptitude man-db manpages info dselect live-config live-config-sysvinit live-boot live-boot-initramfs-tools"
+	PURGE_PKGS="aptitude man-db mAnpages info dselect perl perl-modules"
 
 	# Removing unused packages
 	for PACKAGE in `echo "$PURGE_PKGS" |sed -e "s/ /\n/g"`
