@@ -1,15 +1,0 @@
-alsa-base
-alsa-tools
-alsa-utils
-fuse-utils
-mpc
-ncmpc
-mpd
-usbmount
-usbutils
-nfs-common
-smbfs
-sshfs
-davfs2
-lirc
-
